kubernetes/apps/network/traefik/traefik/addons/dashboard/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - name: http
      targetPort: 8000
      port: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app traefik-dashboard
  labels:
    app: *app
    kubernetes.io/ingress.class: traefik
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    # traefik.ingress.kubernetes.io/router.middlewares: traefik-dashboard-auth@kubernetescrd
    traefik.ingress.kubernetes.io/router.middlewares: network-oidc-auth@kubernetescrd
spec:
  ingressClassName: traefik-external
  rules:
  - host: traefik.cloud.icylair.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-api
            port:
              number: 8000
  tls:
  - hosts:
      - traefik.cloud.icylair.com
    secretName: icylair-com-all-prod
